apps/digitalocean/priceghost/registration-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: priceghost-backend
  namespace: priceghost
spec:
  template:
    spec:
