apps/digitalocean/priceghost/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: priceghost-route
  namespace: priceghost
  annotations:
    external-dns.alpha.kubernetes.io/hostname: price.farag.tech
